--- a/TestDriveKaro/templates/basic.html
+++ b/TestDriveKaro/templates/basic.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="{% static 'img/logo2.gif' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" id="bootstrap-css">
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
     <script src="{% static 'js/jquery.min.js' %}"></script>
 
 
@@ -77,8 +76,7 @@
         
         .containers .topnav a {
             font-size: 1.5rem;
-            padding: 5px;
-            border-left: 2px solid white;
+            padding: 2.5rem;
             text-decoration: none;
             color: white;
             height: max-content;
@@ -899,6 +897,7 @@
         .blok {
             margin-top: -15px;
             padding: 10px;
+            margin-bottom: 15px;
         }
         
         .pops {
@@ -959,13 +958,11 @@
                 <div class="topnav ok" id="myTopnav">
 
                     <a class="b" href="ind">Home</a>
-                    <a class="b" href="about">About</a>
                     <a class="b" href="topbrand">Top Brands</a>
                     <a class="b" href="luxury">Luxury</a>
                     <a class="b" href="topchoice">Top Choice</a>
                     <a class="b" href="featuredcar">Featured Car</a>
                     <a class="b" href="royal">Royal Enfield</a>
-                    <a class="b" href="contact">Contact</a>
 
                 </div>
                 <div class="bt">
@@ -984,8 +981,9 @@
     </div>
     <div class="footer-basic ">
         <footer>
-            <div class="social "><a href="# " target="__blank "><i class="fa fa-twitter "></i></a><a href="# " target="__blank "><i class="fa fa-linkedin "></i></a><a href="# " target="__blank "><i class="fa fa-google "></i></a><a href="# " target="__blank
-                        "><i class="fa fa-facebook "></i></a></div>
+            <div class="social "><a href="# " target="__blank "><i class="fa fa-twitter " style="margin-top:5px ;"></i></a><a href="# " target="__blank "><i class="fa fa-linkedin " style="margin-top:5px ;"></i></a><a href="# " target="__blank "><i class="fa fa-google " style="margin-top:5px ;"></i></a>
+                <a href="# " target="__blank"><i class="fa fa-facebook " style="margin-top:5px ;"></i></a>
+            </div>
             <ul class="list-inline ">
                 <li class="list-inline-item "><a class="c " href="ind ">Home</a></li>
                 <li class="list-inline-item "><a class="c " href="about ">About</a></li>
@@ -1072,7 +1070,7 @@
     </script>
     <script>
         /* When the user clicks on the button,
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        toggle between hiding and showing the dropdown content */
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                toggle between hiding and showing the dropdown content */
         function myFunction() {
             document.getElementById("myDropdown").classList.toggle("show");
         }
