--- a/TestDriveKaro/templates/filterdata.html
+++ b/TestDriveKaro/templates/filterdata.html
@@ -167,11 +167,11 @@
             <select name="topbrand" id="select-profession" class=" sel active flo" title="topbrand">
             
                 <option selected="true" disabled="disabled"  >Top Brands</option>
-                <option class="k"  value="maruti">Maruti Suzuki</option>
-                <option class="k"  value="hyundai"> Hyundai</option>
-                <option class="k"  value="tata">Tata</option>
-                <option class="k"  value="mahindra">Mahindra</option>
-                <option class="k"  value="honda">Honda</option>
+                <option class="k"  value="Maruti Suzuki">Maruti Suzuki</option>
+                <option class="k"  value="Hyundai"> Hyundai</option>
+                <option class="k"  value="TATA">Tata</option>
+                <option class="k"  value="MAHINDRA">Mahindra</option>
+                <option class="k"  value="Honda">Honda</option>
                 
            
           
@@ -180,11 +180,11 @@
         <div class="blac">
             <select name="luxury" id="select-superpower" class=" sel flo" title="luxury">
                 <option selected="true" disabled="disabled"  >Luxury</option>
-                <option class="k"  value="mercedes">Mercedes</option>
-                <option class="k"  value="jaguar">Jaguar</option>
-                <option class="k"  value="volvo">Volvo</option>
-                <option class="k"  value="bmw">BMW</option>
-                <option class="k"  value="audi">Audi</option>
+                <option class="k"  value="Mercedes-Benz">Mercedes</option>
+                <option class="k"  value="Jaguar">Jaguar</option>
+                <option class="k"  value="Volvo">Volvo</option>
+                <option class="k"  value="BMW">BMW</option>
+                <option class="k"  value="Audi">Audi</option>
             </select>
         </div>
         <div class="blac">
@@ -193,6 +193,7 @@
                 <option  class="k"  value="black">Black</option>
                 <option class="k"  value="red">Red</option>
                 <option class="k"  value="blue">Blue</option>
+                <option class="k"  value="white">White</option>
                 <option class="k"  value="silver">Silver</option>
             </select>
         </div>
@@ -212,35 +213,23 @@
     </form>
 </div>
 
+
+
+
+
+<!-- when no data is selected then it will run -->
+
+
+{% if car %}
+
 <div class="lin"></div>
 <div class="late-car">
     <div class="late-head">
-        <h2>Filtered cars</h2>
+        <h2>{{total}} - {{length}} | {{top}} - {{lens}}</h2>
     </div>
-    {% if car %}
-    <div class="late-content-row">
+    <div name="{{i.TopBrands}}" class="late-content-row">
 
         {% for i in car|slice:'0:' %}
-        <div class="card" style="width: 20rem; height: 25rem;">
-            <img class="card-img-top" src="/media/{{i.img}}" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">{{i.topbrand}}</h5>
-                <p class="card-text">{{i.model}}{{i.color}}{{i.price}}</p>
-                <a href="{{i.url}}" target="--blank" class="btn btn-primary">Book Now</a>
-            </div>
-        </div>
-        {% if forloop.counter|divisibleby:4 and forloop.counter > 0 and not forloop.last %}
-
-    </div>
-
-    <div class="late-content-row">
-        {% endif %} {% endfor %}
-    </div>
-    {% endif %}
-
-    <div class="late-content-row">
-
-        {% for i in cars|slice:'0:' %}
         <div class="card" style="width: 20rem; height: 25rem;">
             <img class="card-img-top" src="/media/{{i.img}}" alt="Card image cap">
             <div class="card-body">
@@ -252,17 +241,30 @@
         {% if forloop.counter|divisibleby:4 and forloop.counter > 0 and not forloop.last %}
 
     </div>
+
     <div class="late-content-row">
         {% endif %} {% endfor %}
     </div>
+    {% endif %} {% if ca %}
+
+</div>
+<div class="late-car">
+    <div class="lin"></div>
+
+    <div class="late-head">
+        <h2>{{lux}} - {{len}}</h2>
+    </div>
+    {% endif %}
+
     <div class="late-content-row">
 
-        {% for i in maruti|slice:'0:' %}
-        <div class="card" style="width: 20rem; height: 25rem;">
+
+        {% for i in ca|slice:'0:' %}
+        <div name="{{i.Luxury}}" class="card" style="width: 20rem; height: 25rem;">
             <img class="card-img-top" src="/media/{{i.img}}" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">{{i.topbrand}}</h5>
-                <p class="card-text">{{i.model}}{{i.color}}{{i.price}}</p>
+                <h5 class="card-title">{{i.Luxury}}</h5>
+                <p class="card-text">{{i.model}}{{i.color}}{{i.Price}}</p>
                 <a href="{{i.url}}" target="--blank" class="btn btn-primary">Book Now</a>
             </div>
         </div>
@@ -274,6 +276,67 @@
     </div>
 
 
-</div>
 
-{% endblock %}
+</div>
+<!-- this is the selected data -->
+
+{% if filt %} {% if filt|length == 0 %}
+<h1 style="text-align: center;"> nothing to see here</h1> {% endif %}
+<div class="late-car">
+    <div class="lin"></div>
+    <div class="late-head">
+        <h2>{{total}} - {{length}} | {{top}} - {{lens}}</h2>
+    </div>
+    <div name="{{i.topbrand}}" class="late-content-row">
+
+        {% for i in filt|slice:'0:' %}
+        <div class="card" style="width: 20rem; height: 25rem;">
+            <img class="card-img-top" src="/media/{{i.img}}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">{{i.topbrand}}</h5>
+                <p class="card-text">{{i.model}}{{i.color}}{{i.price}}</p>
+                <a href="{{i.url}}" target="--blank" class="btn btn-primary">Book Now</a>
+            </div>
+        </div>
+        {% if forloop.counter|divisibleby:4 and forloop.counter > 0 and not forloop.last %}
+
+    </div>
+
+    <div class="late-content-row">
+        {% endif %} {% endfor %}
+    </div>
+    {% elif filts %} {% if filts|length == 0 %}
+    <h1 style="text-align: center;"> nothing to see here</h1> {% endif %}
+
+</div>
+<div class="late-car">
+    <div class="lin"></div>
+
+    <div class="late-head">
+        <h2>{{luxs}} - {{lenss}}</h2>
+    </div>
+
+
+    <div class="late-content-row">
+
+
+        {% for i in filts|slice:'0:' %}
+        <div name="{{i.Luxury}}" class="card" style="width: 20rem; height: 25rem;">
+            <img class="card-img-top" src="/media/{{i.img}}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">{{i.Luxury}}</h5>
+                <p class="card-text">{{i.model}}{{i.color}}{{i.Price}}</p>
+                <a href="{{i.url}}" target="--blank" class="btn btn-primary">Book Now</a>
+            </div>
+        </div>
+        {% if forloop.counter|divisibleby:4 and forloop.counter > 0 and not forloop.last %}
+
+    </div>
+    <div class="late-content-row">
+        {% endif %} {% endfor %}
+    </div>
+
+
+
+</div>
+{% endif %} {% endblock %}
